@@ -344,6 +344,7 @@
 #define IDS_PROGRS_TITLE_IMPORT         1226
 #define IDC_WCPATHLABEL                 1226
 #define IDS_PROGRS_TITLE_UPDATE         1227
+#define IDC_REPOCHECK                   1227
 #define IDS_PROGRS_TITLE_COMMIT         1228
 #define IDS_PROGRS_TITLE_ADD            1229
 #define IDS_PROGRS_TITLE_REVERT         1230
@@ -663,7 +664,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        207
 #define _APS_NEXT_COMMAND_VALUE         32789
-#define _APS_NEXT_CONTROL_VALUE         1227
+#define _APS_NEXT_CONTROL_VALUE         1228
 #define _APS_NEXT_SYMED_VALUE           195
 #endif
 #endif
