@@ -10,6 +10,8 @@
        anymore. See issue #102. (Stefan)
 - NEW: "explore to" context menu command in the commit dialog.
        See issue #105. (Stefan)
+- NEW: Option to make the "Check for modifications" dialog contact
+       the repository the first time. See issue #107. (Stefan)
 - CHG: The ESC key closes the progress dialog. See Issue #96. (Stefan)
 - CHG: Reintroduce the doubleclick action in the log dialog. (Stefan)
 - BUG: Crash in TSVNCache. See issue #91.
